Trying CRaC