@@ -18,6 +18,13 @@
 # --enable-preview to use the new memory mapped segments
 # We don't allocate much, so just give it 1G heap and turn off GC; the AlwaysPreTouch was suggested by the ergonomics
 JAVA_OPTS="--enable-preview -da -dsa -Xms1g -Xmx1g -XX:+UnlockExperimentalVMOptions -XX:+UseEpsilonGC  -XX:+AlwaysPreTouch"
+JAVA_OPTS="--enable-preview -da -dsa -Xms1g -Xmx1g"
+
+if [ -d cr ]
+then JAVA_OPTS="$JAVA_OPTS -XX:CRaCRestoreFrom=cr" # enable CRaC
+else JAVA_OPTS="$JAVA_OPTS -XX:CRaCCheckpointTo=cr -Dcrac.checkpoint=true" # instruct to store a checkpoint if not present
+fi
+
 time java $JAVA_OPTS --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_ddimtirov
 
 # & "$Env:JAVA_HOME/bin/java" --enable-preview -Xms1g -Xmx1g -XX:+UnlockExperimentalVMOptions -XX:+UseEpsilonGC  -XX:+AlwaysPreTouch --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_ddimtirov
